working on editing data, handling errors

--- a/client/index.html
+++ b/client/index.html
@@ -17,6 +17,7 @@
       crossorigin="anonymous"
     />
     <script src="main.js" defer type="module"></script>
+    <link rel="stylesheet" href="main-css.css" />
   </head>
 
   <body>
